# STGNNBrain

./: LICENSE  README.md  config.json  pyproject.toml  setup.sh
data/: labels.csv  parcel_data.txt  trackingdata_goodscans.txt
data/connectivity/: sub014.txt  sub015.txt  sub016.txt  sub017.txt  sub018.txt  sub019.txt  sub020.txt  sub021.txt  sub022.txt  sub023.txt  sub024.txt  sub025.txt  sub026.txt  sub027.txt  sub028.txt  sub029.txt  sub030.txt  sub032.txt  sub035.txt  sub036.txt  sub037.txt  sub038.txt  sub039.txt  sub040.txt  sub041.txt  sub042.txt  sub043.txt  sub044.txt  sub045.txt  sub046.txt  sub047.txt  sub048.txt  sub049.txt  sub050.txt  sub051.txt  sub053.txt  sub054.txt  sub056.txt  sub057.txt  sub058.txt  (+44 more)
data/connectivity_aa116/: sub011.txt  sub013.txt  sub014.txt  sub015.txt  sub016.txt  sub017.txt  sub018.txt  sub019.txt  sub020.txt  sub021.txt  sub022.txt  sub023.txt  sub024.txt  sub025.txt  sub026.txt  sub027.txt  sub028.txt  sub029.txt  sub030.txt  sub031.txt  sub032.txt  sub033.txt  sub034.txt  sub035.txt  sub036.txt  sub037.txt  sub038.txt  sub039.txt  sub040.txt  sub041.txt  sub042.txt  sub043.txt  sub044.txt  sub045.txt  sub046.txt  sub047.txt  sub048.txt  sub049.txt  sub050.txt  sub051.txt  (+51 more)
data/timeseries/: sub014.txt  sub015.txt  sub016.txt  sub017.txt  sub018.txt  sub019.txt  sub020.txt  sub021.txt  sub022.txt  sub023.txt  sub024.txt  sub025.txt  sub026.txt  sub027.txt  sub028.txt  sub029.txt  sub030.txt  sub032.txt  sub035.txt  sub036.txt  sub037.txt  sub038.txt  sub039.txt  sub040.txt  sub041.txt  sub042.txt  sub043.txt  sub044.txt  (+56 more)
(+104 files in other folders)
